content/docs/v0.0.1/reference/google.kubeform.com/ComputeBackendBucket.md
---
title: ComputeBackendBucket
menu:
  docs_v0.0.1:
    identifier: computebackendbucket-google.kubeform.com
    name: ComputeBackendBucket
    parent: google.kubeform.com-reference
    weight: 1
menu_name: docs_v0.0.1
section_menu_id: reference
info:
  version: v0.0.1
---

## ComputeBackendBucket
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `google.kubeform.com/v1alpha1` |
|    `kind` | string | `ComputeBackendBucket` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[ComputeBackendBucketSpec](#ComputeBackendBucketSpec)***||
| `status` | ***[ComputeBackendBucketStatus](#ComputeBackendBucketStatus)***||
## ComputeBackendBucketSpec
##### (Appears on:[ComputeBackendBucket](#ComputeBackendBucket), [ComputeBackendBucketStatus](#ComputeBackendBucketStatus))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `bucketName` | ***string***||
| `creationTimestamp` | ***string***| ***(Optional)*** |
| `description` | ***string***| ***(Optional)*** |
| `enableCdn` | ***bool***| ***(Optional)*** |
| `name` | ***string***||
| `project` | ***string***| ***(Optional)*** |
| `selfLink` | ***string***| ***(Optional)*** |
## ComputeBackendBucketStatus
##### (Appears on:[ComputeBackendBucket](#ComputeBackendBucket))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[ComputeBackendBucketSpec](#ComputeBackendBucketSpec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis.State***| ***(Optional)*** |
---
